--- a/.gitignore
+++ b/.gitignore
@@ -60,7 +60,7 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+*/node_modules/
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
@@ -210,6 +210,4 @@ zsdoc/data
 !/tests/_output/.gitkeep
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,linux,node,zsh
-
-# Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
